<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_black"
    tools:context="fise.feng.com.beautifulwatchlauncher.aty.SOSEditActivity">
    <LinearLayout
        android:id="@+id/contact_linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/edit_contact_name"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:hint="@string/name_hint"
                android:textColorHint="@color/hint_color"
                android:inputType="textPersonName"
                android:maxLength="16"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/contact_number"
                android:textColor="@android:color/white"
                android:textSize="14sp"/>
            <EditText
                android:id="@+id/edit_contact_number"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:hint="@string/number_hint"
                android:textColorHint="@color/hint_color"
                android:inputType="phone"
                android:textColor="@android:color/white"
                android:maxLength="12"
                android:textSize="14sp"/>
        </LinearLayout>

    </LinearLayout>
    <Button
        android:id="@+id/commit_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="12dp"
        android:text="@string/commit"
        android:layout_below="@id/contact_linear"
        />

</RelativeLayout>
